# pragma

./: .gitignore  README.md  fetchsources.py  index.html  progress.md  pyproject.toml  render.yaml  test_chunker.py
app/: main.py
app/agent/: loop.py  models.py  parser.py  reporter.py  router.py  scanner.py
app/knowledge/: ingest.py  md_chunker.py  query.py
app/knowledge/sources/cwe/: cwe22_path_traversal.md  cwe352_csrf.md  cwe434_file_upload.md  cwe78_os_injection.md  cwe862_authz.md  cwe918_ssrf.md
app/knowledge/sources/owasp/: cryptographic_storage.md  dom_xss.md  error_handling.md  injection_prevention.md  insecure_direct_object_reference.md  jwt.md  logging.md  mass_assignment.md  oauth2.md  password_storage.md  session_management.md  ssrf.md  xss_prevention.md  xxe.md
app/rag/: chunker.py  embedder.py  ingestor.py  store.py
chroma_db/: chroma.sqlite3
docs/: index.html
knowledge/: __init__.py  ingest.py  query.py
knowledge/sources/cwe/: cwe306_auth.md  cwe327_weak_crypto.md  cwe330_weak_random.md  cwe502_deserialization.md  cwe611_xxe.md  cwe798_hardcoded_creds.md  cwe79_xss.md  cwe89_sqli.md  cwe94_code_injection.md
knowledge/sources/owasp/: access_control.md  authentication.md  csrf.md  deserialization.md  django_rest.md  django_security.md  file_upload.md  http_headers.md  input_validation.md  java_security.md  nodejs_security.md  os_command_injection.md  prototype_pollution.md  query_parameterization.md  secrets_management.md  sql_injection.md  tls.md
